[tool.poetry]
name = "check-wheels-in-stock"
version = "0.1.0"
description = ""
authors = ["ArthurGolubev <gg.arthur.go@gmail.com>"]
readme = "README.md"
packages = [{include = "check_wheels_in_stock"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.1"
beautifulsoup4 = "^4.11.2"
notifiers = "^1.3.3"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
